# e172

./: CMakeLists.txt  CPPLINT.cfg  README.md  e172.cmake
.github/workflows/: ubuntu-22.04.yml  windows-2022.yml
benches/: CMakeLists.txt  main.cpp  variantbenches.cpp  variantbenches.h
cmake/: e172Config.cmake.in  utils.cmake
src/: CMakeLists.txt  abstracteventhandler.h  abstracteventprovider.cpp  abstracteventprovider.h  additional.cpp  additional.h  args.h  concepts.h  consolecolor.cpp  consolecolor.h  context.cpp  context.h  conversion.h  debug.cpp  debug.h  entity.cpp  entity.h  entityaddedobserver.h  entitylifetimeobserver.h  eventhandler.cpp  eventhandler.h  gameapplication.cpp  gameapplication.h  messagequeue.cpp  messagequeue.h  meta.h  object.cpp  object.h  physicalobject.h  sfinae.h  sharedcontainer.cpp  sharedcontainer.h  smartenum.cpp  smartenum.h  testing.cpp  testing.h  textformat.h  todo.h  traits.h  type.cpp  (+4 more)
src/assettools/: CMakeLists.txt  abstractassetexecutor.cpp  abstractassetexecutor.h  assetprovider.cpp  assetprovider.h  loadable.cpp  loadable.h  loadabletemplate.cpp  loadabletemplate.h
src/audio/: CMakeLists.txt  abstractaudioprovider.cpp  abstractaudioprovider.h  audiochannel.cpp  audiochannel.h  audioplayer.cpp  audioplayer.h  audiosample.cpp  audiosample.h
src/functional/: CMakeLists.txt  metafunction.h
src/graphics/: CMakeLists.txt  abstractgraphicsprovider.cpp  abstractgraphicsprovider.h  abstractrenderer.cpp  abstractrenderer.h  color.cpp  color.h  image.cpp  image.h  imageview.cpp  imageview.h  shapeformat.cpp  shapeformat.h  textformat.cpp  textformat.h
src/math/: CMakeLists.txt  averagecalculator.cpp  averagecalculator.h  cellularautomaton.cpp  cellularautomaton.h  colider.cpp  colider.h  differentiator.cpp  differentiator.h  discretizer.cpp  discretizer.h  intergrator.cpp  intergrator.h  kinematics.cpp  kinematics.h  line2d.cpp  line2d.h  math.cpp  math.h  matrix.cpp  matrix.h  physicalobject.cpp  physicalobject.h  rational.h  vector.cpp  vector.h
src/memcontrol/: CMakeLists.txt  abstractfactory.h  abstractstrategy.h
src/net/: CMakeLists.txt  common.h  gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h  netsync.h  networker.cpp  networker.h  server.h  socket.h
src/net/impl/linux/: networkerimpl.cpp  networkerimpl.h  serverimpl.cpp  serverimpl.h  socketimpl.cpp  socketimpl.h
src/net/linux/: CMakeLists.txt  networker.cpp  networker.h  server.cpp  server.h  socket.cpp  socket.h
src/net/mem/: CMakeLists.txt  networker.h  server.h  socket.h
src/time/: CMakeLists.txt  deltatimecalculator.h  elapsedtimer.cpp  elapsedtimer.h  time.cpp  time.h
src/utility/: CMakeLists.txt  animator.cpp  animator.h  boolean.h  buffer.h  callback.h  closableoutputstream.cpp  closableoutputstream.h  cycliciterator.h  defer.cpp  defer.h  destroysignal.cpp  destroysignal.h  dynamiclibrary.cpp  dynamiclibrary.h  either.cpp  either.h  flagparser.cpp  flagparser.h  informative.h  io.h  lightvector.cpp  lightvector.h  matrixproxy.cpp  matrixproxy.h  observer.h  option.cpp  option.h  optional.cpp  optional.h  package.h  priorityprocedure.cpp  priorityprocedure.h  ptr.h  random.cpp  random.h  reflection.h  resource.h  ringbuf.h  signal.h  (+7 more)
tests/: CMakeLists.txt  additionalspec.cpp  additionalspec.h  additionaltest.cpp  additionaltest.h  bufferspec.cpp  packagespec.cpp  priorityprocedurespec.cpp  priorityprocedurespec.h  priorityproceduretest.cpp  priorityproceduretest.h  ringbufspec.cpp  ringbufspec.h  testsmain.cpp  testtools.h  variantspec.cpp  variantspec.h  varianttest.cpp  varianttest.h
tests/integration/: CMakeLists.txt
tests/integration/clientserver/: CMakeLists.txt  bullet.cpp  bullet.h  main.cpp  shooter.cpp  shooter.h
tests/unit/: CMakeLists.txt  additionalspec.cpp  additionalspec.h  bufferspec.cpp  bufferspec.h  flagparserspec.cpp  flagparserspec.h  main.cpp  packagespec.cpp  packagespec.h  priorityprocedurespec.cpp  priorityprocedurespec.h  ringbufspec.cpp  ringbufspec.h  typespec.cpp  typespec.h  variantspec.cpp  variantspec.h
